[gd_scene load_steps=8 format=3 uid="uid://curaf3kfm3ni6"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_0lu7s"]
[ext_resource type="PackedScene" uid="uid://b78h2t3hvwijs" path="res://Scenes/background.tscn" id="1_ndvvk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0yhde"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cvies"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3cgc4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fyahl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6em2n"]

[node name="main_menu" type="Node2D"]
script = ExtResource("1_0lu7s")

[node name="background" parent="." instance=ExtResource("1_ndvvk")]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 176.0
offset_top = 640.0
offset_right = 904.0
offset_bottom = 1760.0
theme_override_constants/separation = 30

[node name="menu_button_5" type="Button" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 90
theme_override_styles/focus = SubResource("StyleBoxEmpty_0yhde")
text = "Game Menu"

[node name="menu_button_2" type="Button" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 90
theme_override_styles/focus = SubResource("StyleBoxEmpty_cvies")
text = "Options"

[node name="menu_button_3" type="Button" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 90
theme_override_styles/focus = SubResource("StyleBoxEmpty_3cgc4")
text = "Quit"

[node name="menu_button_1" type="Button" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 90
theme_override_styles/focus = SubResource("StyleBoxEmpty_fyahl")
text = "Old menu"

[node name="menu_button_4" type="Button" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 90
theme_override_styles/focus = SubResource("StyleBoxEmpty_6em2n")
text = "V42
Game"

[connection signal="pressed" from="Control/VBoxContainer/menu_button_5" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/menu_button_2" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/menu_button_3" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/menu_button_1" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/menu_button_4" to="." method="_on_button_pressed"]
